test/compiler/neg/NotInScope.abs
module NotInScope;

{
 {
  String s = "mplo";
 }
 s = "mpli";

}